<resources>
    <string name="app_name">NutritionTracker</string>
    <string name="byName">By Name</string>
    <string name="byIngredient">By Ingredient</string>
    <string name="textview">TextView</string>
    <string name="categories">Categories</string>
    <string name="enter_category_or_meal_name">Enter category or meal name</string>
    <string name="by_ingredient">By Ingredient</string>
    <string name="find">Find</string>
    <string name="edittext">EditText</string>
    <string name="name">Name</string>
    <string name="prev_page">prev page</string>
    <string name="next_page">Next page</string>
    <string name="descending">DESCENDING</string>
    <string name="ascending">ASCENDING</string>
    <string name="filter_by_name">Filter By Name</string>
    <string name="enter_ingredient_name">Enter ingredient name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="save_meal">Save meal</string>
    <string name="find_by_name">Find by name</string>
    <string name="search_by_name">Search by name</string>
    <string name="remote">Remote</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="enter_email">Enter email</string>
    <string name="send_plan">Send Plan</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="saved_meals">Saved Meals</string>
    <string name="save">SAVE</string>
    <string name="filter">Filter</string>
    <string name="meals">Meals</string>
    <string name="plan">Plan</string>
    <string name="profile">Profile</string>
</resources>