<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_1"
        android:icon="@drawable/categories_bottomnav_icon"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_2"
        android:icon="@drawable/filter_bottomnav_icon"
        android:title="@string/filter" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/meals_bottomnav_icon"
        android:title="@string/meals" />

    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/plan_bottomnav_icon"
        android:title="@string/plan" />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/profile_bottomnav_icon"
        android:title="@string/profile" />
</menu>