<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterIngredientRecycler"
        android:layout_width="409dp"
        android:layout_height="520dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarIngredient"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/progressBarBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filterIngredientFragmentET"
        android:layout_width="214dp"
        android:layout_height="34dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_box"
        android:ems="10"
        android:hint="@string/filter_by_name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ingredientET"
        android:layout_width="218dp"
        android:layout_height="38dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_box"
        android:ems="10"
        android:hint="@string/enter_ingredient_name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/filterIngredientFragmentET"
        app:layout_constraintEnd_toStartOf="@+id/findByIngredientButton"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/findByIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorSelected"
        android:text="@string/find"
        app:layout_constraintBottom_toTopOf="@+id/filterIngredientFragmentET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <ToggleButton
        android:id="@+id/toggleButtonIngredient"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/edittext_box"
        android:textOff="@string/descending"
        android:textOn="@string/ascending"
        app:layout_constraintBottom_toTopOf="@+id/filterIngredientRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ingredientPrevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="12dp"
        android:text="@string/prev_page"
        app:layout_constraintBottom_toTopOf="@+id/filterIngredientRecycler"
        app:layout_constraintEnd_toStartOf="@+id/ingredientNextButton"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggleButtonIngredient"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ingredientNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/next_page"
        app:layout_constraintBottom_toTopOf="@+id/filterIngredientRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonIngredient"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>