<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterAreaRecycler"
        android:layout_width="409dp"
        android:layout_height="520dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/filterAreaFragmentET"
        android:layout_width="214dp"
        android:layout_height="34dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/edittext_box"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/edittext_box"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/filterAreaFragmentET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/toggleButtonArea"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/edittext_box"
        android:textOff="DESCENDING"
        android:textOn="ASCENDING"
        app:layout_constraintBottom_toTopOf="@+id/filterAreaRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/progressBarBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/areaPrevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/prev_page"
        android:background="@drawable/toggle_box_on"
        app:layout_constraintBottom_toTopOf="@+id/filterAreaRecycler"
        app:layout_constraintEnd_toStartOf="@+id/areaNextButton"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonArea" />

    <Button
        android:id="@+id/areaNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next_page"
        android:background="@drawable/toggle_box_on"
        app:layout_constraintBottom_toTopOf="@+id/filterAreaRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonArea" />


</androidx.constraintlayout.widget.ConstraintLayout>